2011-11-05  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (dir_tables_init): Bugfix: horizontal @(some)
	directive not included in dispatch table.

2011-11-05  Kaz Kylheku  <kaz@kylheku.com>

	* configure: Bugfixes. Before the compiler tests, we must
	remove the conftest executable, to make sure that the next test will
	try to re-make it. The configure runs fast enough that the new
	conftest.c does not always have a timestamp which is newer than
	previous conftest executable.

2011-11-05  Kaz Kylheku  <kaz@kylheku.com>

	Task #11442. Make work on MingW.

	* configure: Test for environ and GetEnvironmentStrings.

	* lib.c: Conditionally include <windows.h>.
	(env): Implemented for POSIX and Windows with #ifdefs.

2011-11-05  Kaz Kylheku  <kaz@kylheku.com>

	Task #11442. Access to environment variables.

	* lib.c (env_list): New static variable.
	(env): New function.
	(match): Declaration of nonexistent function removed.
	(obj_init): New variable gc-protected.

	* lib.h (env): Declared.

	* match.c (env_k): New symbol variable.
	(v_next): Implemented :env.

	* txr.1: @(next :env) described.

2011-11-04  Kaz Kylheku  <kaz@kylheku.com>

	* hash.c (ll_hash): Added a break in the case that handles
	pointer hashing of identity-equal objects. Without this, if the
	pointer size is not 4 or 8, we fall through to the next case.

2011-11-04  Kaz Kylheku  <kaz@kylheku.com>

	* txr.c (help): Change year from 2009 to 2011.

2011-11-03  Kaz Kylheku  <kaz@kylheku.com>

	* tests/008/students.txr: Use disciplined collect with :vars.

2011-11-03  Kaz Kylheku  <kaz@kylheku.com>

	* tests/008/students.txr: Regexes removed.

2011-11-02  Kaz Kylheku  <kaz@kylheku.com>

	* txr.vim: Added missing keywords.

2011-11-01  Kaz Kylheku  <kaz@kylheku.com>

	* genman.txr: Use filter for mapping month digits to names.
	Added comment about where to find the right man2html.

2011-11-01  Kaz Kylheku  <kaz@kylheku.com>

	* txr.vim: Added installation instructions.
